--- a/index.html
+++ b/index.html
@@ -5,82 +5,89 @@
     <title>Matching Game</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Srisakdi:700" rel="stylesheet">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-
     <div class="container">
         <header>
             <h1>Matching Game</h1>
         </header>
-
+        <div class= "timer">
+            <span>00:</span>
+            <span id="counter">00</span>
+        </div>
         <section class="score-panel">
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
-
-        	<span class="moves">3</span> Moves
-
+        	<span class="moves"><span id="moves">0</span> Moves </span>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
-
         <ul class="deck">
-            <li class="card">
+            <li class="card 1">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li class="card 2">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match">
+            <li class="card 3">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li class="card 4">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li class="card 5">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card match">
+            <li class="card 6">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li class="card 7">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li class="card 8">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li class="card 9">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li class="card 10">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
+            <li class="card 11">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li class="card 12">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+            <li class="card 13">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li class="card 14">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li class="card 15">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
+            <li class="card 16">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
     </div>
-
+    <div id ="mod" class="modal">
+        <div class="content">
+            <div class="congos"></div>
+            <div class="score"></div>
+            <button class="restart repeat">Play Again</button>
+        </div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
